syntax = "proto3";

package yandex.cloud.priv.console.v1;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/console/v1;console";
option java_outer_classname = "PCF";

/**
Form should represent JSON Schema
*/
message FormResponse {
  enum FormItemType {
    FORM_ITEM_TYPE_UNSPECIFIED = 0;
    STRING = 1;
    INT64 = 2;
    OBJECT = 3;
    ARRAY = 4;
    SECRET = 5;
    BOOL = 6;
    ENUM = 7;
    NUMBER = 8;
  }

  enum CustomType {
    CUSTOM_TYPE_UNSPECIFIED = 0;
    PASSWORD = 1;
    TEXT_AREA = 2;
    SUBNETWORK = 3;
    FILE = 4;
    ONE_OF = 5;
    SERVICE_ACCOUNT = 6;
    K8S_NAMESPACE = 7;
  }

  message ViewTableCell {
    string label = 1;
    string property = 2;
  }

  message ViewSpec {
    string label = 1;
    string help = 2;
    string important_note = 3;
    //CustomType - type of special ui control (FormItemType - type of value that will be passed back from the filled form)
    CustomType type = 4;
    bool disabled = 5;
    repeated ViewTableCell table = 6;
    //order of properties of enclosing FormItem
    repeated string order = 7;
  }

  message FormItem {
    ViewSpec view_spec = 1;
    bool required = 2;
    //json properties of item that will be passed back from the filled form
    map<string, FormItem> properties = 3;
    string value = 4;
    FormItemType type = 5;
    //enum keys
    repeated string enum = 6;
    //map for enum: enum key -> enum label
    map<string, string> description = 7;
    //for arrays: type of elements
    FormItem items = 8;

    //number validation
    double minimum = 9;
    double maximum = 10;

    //string validation
    int64 min_length = 11;
    int64 max_length = 12;
    string pattern = 13;
  }

  FormItem root = 1;
}
